# poc-cookiecutter-docker

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  cz.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_environment.py
.github/workflows/: docker-image.yml
docker/: .dockerignore  Dockerfile
docs/: Makefile  conf.py  index.rst  make.bat
src/data/: make_dataset.py
src/models/: __init__.py  model.py
tests/: test_model.py
